# Security-Analyser

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements-dev.txt
.github/workflows/: ci.yml
src/security_analyser/: __init__.py  active_checks.py  analyser.py  assets.py  audit.py  checks.py  cli.py  content_checks.py  crawler.py  dns_checks.py  error_checks.py  fetch.py  impact.py  metadata.py  model.py  paths.py  report.py  scanner.py  web.py
src/security_analyser/static/: index.html
tests/: test_active_checks.py  test_analyser.py  test_audit.py  test_batch_attributes.py  test_checks.py  test_content_checks.py  test_crawler.py  test_impact.py  test_injection_malware.py  test_integration.py  test_new_checks.py  test_reliability.py  test_robustness.py  test_web.py
