[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "security-analyser"
version = "0.1.0"
description = "A starter scaffold for a security analysis tool."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Piyush Makwana" }]
keywords = ["security", "analysis", "scanner", "sast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []

[project.scripts]
security-analyser = "security_analyser.cli:main"

[project.urls]
Homepage = "https://github.com/piyushkmakwe/Security-Analyser"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
